# cicd-testing

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  bump-version.sh  bump_version.sh  note.txt  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml
requirements/: requirements.ci.txt  requirements.txt
