[tool.poetry]
name = "ci-cd-test"
version = "v0.5.1"
description = "testing for andi ci/cd"
authors = ["nick <nick.scipione@valkyrie.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.ci.dependencies]
git-cliff = "^2.6.1"
poetry = "^1.8.4"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.ruff]
line-length = 120
lint.select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
