[tool.poetry]
name = "sem-verified-ci"
version = "v0.8.2"
description = "ci/cd workflow and script for automatic semantic versioning and changelog generation"
authors = ["nick <nickscip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.ci.dependencies]
git-cliff = "^2.6.1"
poetry = "^1.8.4"

[tool.poetry.plugins."poetry.application.plugin"]
export = "poetry_plugin_export.plugins:ExportApplicationPlugin"

[tool.ruff]
line-length = 120
lint.select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
